# openModeller

./: .gitignore
ex_openmodeller/src/inc/: Makefile.am  Model.hh  algorithm_factory.hh  configurable.hh  configuration.hh  environment.hh  file_parser.hh  map_format.hh  normalizable.hh  occurrence.hh  om.hh  om_alg_parameter.hh  om_algorithm.hh  om_algorithm_metadata.hh  om_area_stats.hh  om_conf_matrix.hh  om_control.hh  om_defs.hh  om_log.hh  om_occurrences.hh  om_projector.hh  om_sampler.hh  os_specific.hh  random.hh
openModellerDesktop/: CHANGELOG.html  CMakeLists.txt  CONTRIBUTORS.html  Doxyfile  INSTALL.t2t  INSTALL.txt  Nov2010WorkshopBugs.txt  README.txt  TAGS  TODO  openmodellerdesktop.spec
openModellerDesktop/cmake_find_rules/: FindOpenThreads.cmake  FindTerraLib.cmake  FindWMS.cmake  FindopenModeller.cmake  Findosg.cmake  FindosgDB.cmake  FindosgGA.cmake  FindosgText.cmake  FindosgUtil.cmake  Findossim.cmake  FindossimPlanet.cmake  FindossimPlanetQt.cmake
openModellerDesktop/cmake_templates/: omgconfig.h.in  omgsvnversion.h.in_cmake  svnscript.cmake.in_cmake
openModellerDesktop/debian/: changelog  control  copyright  data-files  manpages  openModellerDesktop.dirs  openmodellerdesktop.1  openmodellerdesktop.install  openmodellerdesktop.menu  rules
openModellerDesktop/docs/: index.dox  modules.dox
openModellerDesktop/docs/api/: README
openModellerDesktop/docs/uml/: omg.xmi
openModellerDesktop/docs/xml_examples/: ExperimentXmlExample.xml
openModellerDesktop/i18n/: CMakeLists.txt  README.t2t  openModellerDesktop_af_ZA.ts.old  openModellerDesktop_pt_BR.ts.old  openModellerDesktop_ru.ts  openModellerDesktop_zh_TW.ts
openModellerDesktop/install_linux/: build_package.sh
openModellerDesktop/install_mac/: 1-release-extra.sh  2-release-extra-qt.sh  3-dmg.sh  README.mac.txt  README_build.txt  dmg_background.xcf  drive.tiff  omd_drive_icon.icns  release-check.sh  test_bundle.sh
openModellerDesktop/install_win/: README.txt  openModellerDesktop.nsi
openModellerDesktop/scripts/: build  build_debian_package.sh  genCallGraph.sh  genMemCheck.sh  install_designer_plugins.sh  maketags.sh  runDebug.sh  runRelease.sh  runTest.sh  runtests.sh  update_translations.bat  update_translations.sh
openModellerDesktop/src/: CMakeLists.txt
openModellerDesktop/src/console/: gbif_search_main.cpp  main.cpp  omg_pseudocolour.cpp  omggbifconsolesearch.cpp  omggbifconsolesearch.h
openModellerDesktop/src/designer/: README.txt  omgdesignerplugin.cpp  omgdesignerplugin.h  omgdesignerwidgets.qrc
openModellerDesktop/src/gui/: CMakeLists.txt  main.cpp  omgabout.cpp  omgabout.h  omgalgorithmmanager.cpp  omgalgorithmmanager.h  omgclimateconverter.cpp  omgclimateconverter.h  omgclimatedataprocessorgui.cpp  omgclimatedataprocessorgui.h  omgexperimentdesigner.cpp  omgexperimentdesigner.h  omgexperimentselector.cpp  omgexperimentselector.h  omggdalconverter.cpp  omggdalconverter.h  omggdalrastercontour.cpp  omggdalrastercontour.h  omggdalwarp.cpp  omggdalwarp.h  omglayerselector.cpp  omglayerselector.h  omglayersetmanager.cpp  omglayersetmanager.h  omglocalitiesoptions.cpp  omglocalitiesoptions.h  omgmainwindow.cpp  omgmainwindow.h  omgmodeltestoptions.cpp  omgmodeltestoptions.h  omgmodeltests.cpp  omgmodeltests.h  omgoptions.cpp  omgoptions.h  omgpreanalysisalgorithmmanager.cpp  omgpreanalysisalgorithmmanager.h  omgpublishtocatalogue.cpp  omgpublishtocatalogue.h  omgrasterthreshold.cpp  omgrasterthreshold.h  (+11 more)
openModellerDesktop/src/lib/: CMakeLists.txt  omgalgorithm.cpp  omgalgorithm.h  omgalgorithmparameter.cpp  omgalgorithmparameter.h  omgalgorithmset.cpp  omgalgorithmset.h  omgclimatedataprocessor.cpp  omgclimatedataprocessor.h  omgclimatedataprocessorcontroller.cpp  omgclimatedataprocessorcontroller.h  omgclimatefilegroup.cpp  omgclimatefilegroup.h  omgclimatefilereader.cpp  omgclimatefilereader.h  omgclimateimporter.cpp  omgclimateimporter.h  omgdataseries.cpp  omgdataseries.h  omgexperiment.cpp  omgexperiment.h  omgexperimentitemmodel.cpp  omgexperimentitemmodel.h  omgexperimentprinter.cpp  omgexperimentprinter.h  omgfilewriter.cpp  omgfilewriter.h  omggdal.cpp  omggdal.h  omggradientfactory.cpp  omggradientfactory.h  omggraph.cpp  omggraph.h  omgguid.cpp  omgguid.h  omglayer.cpp  omglayer.h  omglayerset.cpp  omglayerset.h  omglocalitiesmodel.cpp  (+40 more)
openModellerDesktop/src/plugins/: CMakeLists.txt
openModellerDesktop/src/qgis_plugin/: CMakeLists.txt  README  omgalgorithmpagebase.ui  omgexperimentpagebase.ui  omgexperimentprogress.cpp  omgexperimentprogress.h  omgfieldspagebase.ui  omglayersetpagebase.ui  omgoccurrencespagebase.ui  omgprojectionpagebase.ui  omgqgisexperimentdesigner.cpp  omgqgisexperimentdesigner.h  omgqgispluginoptions.cpp  omgqgispluginoptions.h  omgqgispluginoptionsbase.ui  omgreportdialog.cpp  omgreportdialog.h  omgreportdialogbase.ui  omgtaxapagebase.ui  omgwizard.cpp  omgwizard.h  omgwizardbase.ui  omgwizardpages.cpp  omgwizardpages.h  qgisomplugin.cpp  qgisomplugin.h
openModellerDesktop/src/resources/: CMakeLists.txt  README.txt  algorithm-EnvironmentalDistance-Chebyshev.xml  algorithm-EnvironmentalDistance-Mahalanobis.xml  algorithm-EnvironmentalDistance-Manhattan.xml  algorithm-SVM-C-SVC.xml  algorithm-SVM-Nu-SVC.xml  algorithm-SVM-One-Class.xml  first_run.xcf  icons.xcf  om_logos_master.xcf  om_logos_master_large.xcf  resources.qrc  wkt_defs.txt
openModellerDesktop/src/tests/: CMakeLists.txt  localities2csvtest.cpp  omgdataseriestest.cpp  omgexperimentprintertest.cpp  omgexperimenttest.cpp  omggradientfactorytest.cpp  omggraphtest.cpp  omglocalitiesmodeltest.cpp  omgmodellerlocalplugintest.cpp  omgmodellerwebservicesplugintest.cpp  omgmodeltest.cpp  omgtipfactorytest.cpp  omgtiptest.cpp  omguitest.cpp  openmodellerlogtest.cpp  strobo.txt
openModellerDesktop/src/ui/: CMakeLists.txt  omgaboutbase.ui  omgalgorithmmanagerbase.ui  omgclimateconverterbase.ui  omgclimatedataprocessorguibase.ui  omgdatafetcherwizardlicensewidgetbase.ui  omgdatafetcherwizardprogresswidgetbase.ui  omgdatafetcherwizardsearchwidgetbase.ui  omgexperimentdesignerbase.ui  (+19 more)
(+477 files in other folders)
